--- a/src/components/UNSTABLE__LayoutModules/TitleBarModule/_index.scss
+++ b/src/components/UNSTABLE__LayoutModules/TitleBarModule/_index.scss
@@ -11,18 +11,19 @@
 @import 'variables';
 
 @include security--component($name: $layout-modules__title-bar__name) {
+  /// Spacing.
+  /// @type Length
+  $title-bar__spacing: $carbon--layout-01;
+
   display: flex;
+  padding-top: $title-bar__spacing;
+  padding-bottom: $title-bar__spacing;
   align-items: center;
 
   &__title {
-    /// Spacing.
-    /// @type Length
-    $title-bar__spacing: $carbon--layout-01;
-
     @include carbon--type-style($name: productive-heading-03);
-
-    margin-top: $title-bar__spacing;
-    margin-bottom: $title-bar__spacing;
+    margin-top: 0;
+    margin-bottom: 0;
 
     &--subsection {
       @include carbon--type-style($name: productive-heading-01);
